tests/snapshots/run_wpt_conformance__trtx_quantized_sigmoid.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "qdq_subgraph.https.any.js",
    "quantized sigmoid",
    "trtx",
    Failed {
        msg: Some(
            "Failed to convert graph: graph conversion failed for trtx: tensor dimensions: Could not get dimensions from Tensor \"(Unnamed Layer* 30) [Activation]_output\"\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    input: f32[2, 3];\n  }\n\n  consts {\n    operand_0: f32[1, 1] @bytes([0, 0, 128, 59]);\n    operand_1: i8[1, 1] @bytes([128]);\n    operand_3: f32[1, 1] @bytes([0, 0, 128, 59]);\n    operand_4: i8[1, 1] @bytes([128]);\n  }\n\n  nodes {\n    [operand_5] = quantizeLinear(input, operand_0, operand_1, label=\"\");\n    [operand_6] = dequantizeLinear(operand_5, operand_0, operand_1, label=\"\");\n    [operand_7] = sigmoid(operand_6, label=\"\");\n    [operand_8] = quantizeLinear(operand_7, operand_3, operand_4, label=\"\");\n    [output] = dequantizeLinear(operand_8, operand_3, operand_4, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
