tests/snapshots/run_wpt_conformance__trtx_quantized_transpose.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "qdq_subgraph.https.any.js",
    "quantized transpose",
    "trtx",
    Failed {
        msg: Some(
            "Failed to convert graph: graph conversion failed for trtx: Transpose: failed to get input dimensions: Could not get dimensions from Tensor \"(Unnamed Layer* 29) [ElementWise]_output\"\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    input: f32[1, 1, 2, 3];\n  }\n\n  consts {\n    operand_0: i8[1, 1, 1, 1] @bytes([128]);\n    operand_1: f32[1, 1, 1, 1] @bytes([129, 128, 128, 59]);\n    operand_2: f32[1, 1, 1, 1] @bytes([129, 128, 128, 59]);\n    operand_3: i8[1, 1, 1, 1] @bytes([128]);\n  }\n\n  nodes {\n    [operand_5] = quantizeLinear(input, operand_1, operand_0, label=\"\");\n    [operand_6] = dequantizeLinear(operand_5, operand_1, operand_0, label=\"\");\n    [operand_7] = transpose(operand_6, label=\"\", permutation=[]);\n    [operand_8] = quantizeLinear(operand_7, operand_2, operand_3, label=\"\");\n    [output] = dequantizeLinear(operand_8, operand_2, operand_3, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
